Bursting of topic who. Added TOPIC_BURST to example.conf and set to default.

--- a/doc/example.conf
+++ b/doc/example.conf
@@ -912,6 +912,7 @@ features
 # "OPLEVELS" = "FALSE";
 # "ZANNELS" = "FALSE";
 # "LOCAL_CHANNELS" = "TRUE";
+# "TOPIC_BURST" = "TRUE"
 # "ANNOUNCE_INVITES" = "FALSE";
 #  "CAP_ACCOUNTNOTIFY" = "TRUE";
 #  "CAP_AWAYNOTIFY" = "TRUE";
