Disable certain username checks per default.

--- a/doc/example.conf
+++ b/doc/example.conf
@@ -912,6 +912,7 @@ features
 # "OPLEVELS" = "FALSE";
 # "ZANNELS" = "FALSE";
 # "LOCAL_CHANNELS" = "TRUE";
+# "STRICT_USERNAME" = "FALSE";
 # "TOPIC_BURST" = "TRUE"
 # "ANNOUNCE_INVITES" = "FALSE";
 #  "CAP_ACCOUNTNOTIFY" = "TRUE";
